--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">VoiceToText</string>
+    <string name="app_name">LescoTranslator</string>
     <string name="result"></string>
     <string name="microphone">Microphone</string>
     <string name="order">Dí algo</string>
     <string name="notification">Lo sentimos, su dispositivo no puede procesar información
         proveniente de un micrófono.</string>
+    <string name="title_activity_translator">TranslatorActivity</string>
 </resources>
