--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_translator">TranslatorActivity</string>
     <string name="Greeting">Greeting</string>
     <string name="greeting">Bienvenido ingrese la palabra que desea guardar:</string>
+    <string name="AddWord">Ingrese la palabra que desea guardar:</string>
 </resources>
